# serializer version: 1
# name: test_parse_codec_option[mov-muxer]
  list([
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movflags', type='flags', flags='E..........', help='MOV muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='rtphint', help='Add RTP hint tracks', flags='E..........', value='rtphint'), FFMpegOptionChoice(name='empty_moov', help='Make the initial moov atom empty', flags='E..........', value='empty_moov'), FFMpegOptionChoice(name='frag_keyframe', help='Fragment at video keyframes', flags='E..........', value='frag_keyframe'), FFMpegOptionChoice(name='frag_every_frame', help='Fragment at every frame', flags='E..........', value='frag_every_frame'), FFMpegOptionChoice(name='separate_moof', help='Write separate moof/mdat atoms for each track', flags='E..........', value='separate_moof'), FFMpegOptionChoice(name='frag_custom', help='Flush fragments on caller requests', flags='E..........', value='frag_custom'), FFMpegOptionChoice(name='isml', help='Create a live smooth streaming feed (for pushing to a publishing point)', flags='E..........', value='isml'), FFMpegOptionChoice(name='faststart', help='Run a second pass to put the index (moov atom) at the beginning of the file', flags='E..........', value='faststart'), FFMpegOptionChoice(name='omit_tfhd_offset', help='Omit the base data offset in tfhd atoms', flags='E..........', value='omit_tfhd_offset'), FFMpegOptionChoice(name='disable_chpl', help='Disable Nero chapter atom', flags='E..........', value='disable_chpl'), FFMpegOptionChoice(name='default_base_moof', help='Set the default-base-is-moof flag in tfhd atoms', flags='E..........', value='default_base_moof'), FFMpegOptionChoice(name='dash', help='Write DASH compatible fragmented MP4', flags='E..........', value='dash'), FFMpegOptionChoice(name='cmaf', help='Write CMAF compatible fragmented MP4', flags='E..........', value='cmaf'), FFMpegOptionChoice(name='frag_discont', help='Signal that the next fragment is discontinuous from earlier ones', flags='E..........', value='frag_discont'), FFMpegOptionChoice(name='delay_moov', help='Delay writing the initial moov until the first fragment is cut, or until the first fragment flush', flags='E..........', value='delay_moov'), FFMpegOptionChoice(name='global_sidx', help='Write a global sidx index at the start of the file', flags='E..........', value='global_sidx'), FFMpegOptionChoice(name='skip_sidx', help='Skip writing of sidx atom', flags='E..........', value='skip_sidx'), FFMpegOptionChoice(name='write_colr', help='Write colr atom even if the color info is unspecified (Experimental, may be renamed or changed, do not use from scripts)', flags='E..........', value='write_colr'), FFMpegOptionChoice(name='prefer_icc', help='If writing colr atom prioritise usage of ICC profile if it exists in stream packet side data', flags='E..........', value='prefer_icc'), FFMpegOptionChoice(name='write_gama', help='Write deprecated gama atom', flags='E..........', value='write_gama'), FFMpegOptionChoice(name='use_metadata_tags', help='Use mdta atom for metadata.', flags='E..........', value='use_metadata_tags'), FFMpegOptionChoice(name='skip_trailer', help='Skip writing the mfra/tfra/mfro trailer for fragmented files', flags='E..........', value='skip_trailer'), FFMpegOptionChoice(name='negative_cts_offsets', help='Use negative CTS offsets (reducing the need for edit lists)', flags='E..........', value='negative_cts_offsets'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='moov_size', type='int', flags='E..........', help='maximum moov size so it can be placed at the begin (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='rtpflags', type='flags', flags='E..........', help='RTP muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='latm', help='Use MP4A-LATM packetization instead of MPEG4-GENERIC for AAC', flags='E..........', value='latm'), FFMpegOptionChoice(name='rfc2190', help='Use RFC 2190 packetization instead of RFC 4629 for H.263', flags='E..........', value='rfc2190'), FFMpegOptionChoice(name='skip_rtcp', help="Don't send RTCP sender reports", flags='E..........', value='skip_rtcp'), FFMpegOptionChoice(name='h264_mode0', help='Use mode 0 for H.264 in RTP', flags='E..........', value='h264_mode0'), FFMpegOptionChoice(name='send_bye', help='Send RTCP BYE packets when finishing', flags='E..........', value='send_bye'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='skip_iods', type='boolean', flags='E..........', help='Skip writing iods atom. (default true)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_audio_profile', type='int', flags='E..........', help='iods audio profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_video_profile', type='int', flags='E..........', help='iods video profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_duration', type='int', flags='E..........', help='Maximum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='min_frag_duration', type='int', flags='E..........', help='Minimum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_size', type='int', flags='E..........', help='Maximum fragment size (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='ism_lookahead', type='int', flags='E..........', help='Number of lookahead entries for ISM files (from 0 to 255) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='video_track_timescale', type='int', flags='E..........', help='set timescale of all video tracks (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='brand', type='string', flags='E..........', help='Override major brand', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_editlist', type='boolean', flags='E..........', help='use edit list (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='fragment_index', type='int', flags='E..........', help='Fragment number of the next fragment (from 1 to INT_MAX) (default 1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='mov_gamma', type='float', flags='E..........', help='gamma value for gama atom (from 0 to 10) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_interleave', type='int', flags='E..........', help='Interleave samples within fragments (max number of consecutive samples, lower is tighter interleaving, but with more overhead) (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_scheme', type='string', flags='E..........', help='Configures the encryption scheme, allowed values are none, cenc-aes-ctr', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_key', type='binary', flags='E..........', help='The media encryption key (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_kid', type='binary', flags='E..........', help='The media encryption key identifier (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_stream_ids_as_track_ids', type='boolean', flags='E..........', help='use stream ids as track ids (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_btrt', type='boolean', flags='E..........', help='force or disable writing btrt (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_tmcd', type='boolean', flags='E..........', help='force or disable writing tmcd (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_prft', type='int', flags='E..........', help='Write producer reference time box with specified time source (from 0 to 2) (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='wallclock', help='', flags='E..........', value='1'), FFMpegOptionChoice(name='pts', help='', flags='E..........', value='2'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='empty_hdlr_name', type='boolean', flags='E..........', help='write zero-length name string in hdlr atoms within mdia and minf atoms (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movie_timescale', type='int', flags='E..........', help='set movie timescale (from 1 to INT_MAX) (default 1000)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codec_option[mp3-demuxer]
  list([
    FFMpegAVOption(section='mp3 AVOptions:', name='usetoc', type='boolean', flags='.D.........', help='use table of contents (default false)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codec_option[mp4-muxer]
  list([
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movflags', type='flags', flags='E..........', help='MOV muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='rtphint', help='Add RTP hint tracks', flags='E..........', value='rtphint'), FFMpegOptionChoice(name='empty_moov', help='Make the initial moov atom empty', flags='E..........', value='empty_moov'), FFMpegOptionChoice(name='frag_keyframe', help='Fragment at video keyframes', flags='E..........', value='frag_keyframe'), FFMpegOptionChoice(name='frag_every_frame', help='Fragment at every frame', flags='E..........', value='frag_every_frame'), FFMpegOptionChoice(name='separate_moof', help='Write separate moof/mdat atoms for each track', flags='E..........', value='separate_moof'), FFMpegOptionChoice(name='frag_custom', help='Flush fragments on caller requests', flags='E..........', value='frag_custom'), FFMpegOptionChoice(name='isml', help='Create a live smooth streaming feed (for pushing to a publishing point)', flags='E..........', value='isml'), FFMpegOptionChoice(name='faststart', help='Run a second pass to put the index (moov atom) at the beginning of the file', flags='E..........', value='faststart'), FFMpegOptionChoice(name='omit_tfhd_offset', help='Omit the base data offset in tfhd atoms', flags='E..........', value='omit_tfhd_offset'), FFMpegOptionChoice(name='disable_chpl', help='Disable Nero chapter atom', flags='E..........', value='disable_chpl'), FFMpegOptionChoice(name='default_base_moof', help='Set the default-base-is-moof flag in tfhd atoms', flags='E..........', value='default_base_moof'), FFMpegOptionChoice(name='dash', help='Write DASH compatible fragmented MP4', flags='E..........', value='dash'), FFMpegOptionChoice(name='cmaf', help='Write CMAF compatible fragmented MP4', flags='E..........', value='cmaf'), FFMpegOptionChoice(name='frag_discont', help='Signal that the next fragment is discontinuous from earlier ones', flags='E..........', value='frag_discont'), FFMpegOptionChoice(name='delay_moov', help='Delay writing the initial moov until the first fragment is cut, or until the first fragment flush', flags='E..........', value='delay_moov'), FFMpegOptionChoice(name='global_sidx', help='Write a global sidx index at the start of the file', flags='E..........', value='global_sidx'), FFMpegOptionChoice(name='skip_sidx', help='Skip writing of sidx atom', flags='E..........', value='skip_sidx'), FFMpegOptionChoice(name='write_colr', help='Write colr atom even if the color info is unspecified (Experimental, may be renamed or changed, do not use from scripts)', flags='E..........', value='write_colr'), FFMpegOptionChoice(name='prefer_icc', help='If writing colr atom prioritise usage of ICC profile if it exists in stream packet side data', flags='E..........', value='prefer_icc'), FFMpegOptionChoice(name='write_gama', help='Write deprecated gama atom', flags='E..........', value='write_gama'), FFMpegOptionChoice(name='use_metadata_tags', help='Use mdta atom for metadata.', flags='E..........', value='use_metadata_tags'), FFMpegOptionChoice(name='skip_trailer', help='Skip writing the mfra/tfra/mfro trailer for fragmented files', flags='E..........', value='skip_trailer'), FFMpegOptionChoice(name='negative_cts_offsets', help='Use negative CTS offsets (reducing the need for edit lists)', flags='E..........', value='negative_cts_offsets'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='moov_size', type='int', flags='E..........', help='maximum moov size so it can be placed at the begin (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='rtpflags', type='flags', flags='E..........', help='RTP muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='latm', help='Use MP4A-LATM packetization instead of MPEG4-GENERIC for AAC', flags='E..........', value='latm'), FFMpegOptionChoice(name='rfc2190', help='Use RFC 2190 packetization instead of RFC 4629 for H.263', flags='E..........', value='rfc2190'), FFMpegOptionChoice(name='skip_rtcp', help="Don't send RTCP sender reports", flags='E..........', value='skip_rtcp'), FFMpegOptionChoice(name='h264_mode0', help='Use mode 0 for H.264 in RTP', flags='E..........', value='h264_mode0'), FFMpegOptionChoice(name='send_bye', help='Send RTCP BYE packets when finishing', flags='E..........', value='send_bye'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='skip_iods', type='boolean', flags='E..........', help='Skip writing iods atom. (default true)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_audio_profile', type='int', flags='E..........', help='iods audio profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_video_profile', type='int', flags='E..........', help='iods video profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_duration', type='int', flags='E..........', help='Maximum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='min_frag_duration', type='int', flags='E..........', help='Minimum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_size', type='int', flags='E..........', help='Maximum fragment size (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='ism_lookahead', type='int', flags='E..........', help='Number of lookahead entries for ISM files (from 0 to 255) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='video_track_timescale', type='int', flags='E..........', help='set timescale of all video tracks (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='brand', type='string', flags='E..........', help='Override major brand', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_editlist', type='boolean', flags='E..........', help='use edit list (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='fragment_index', type='int', flags='E..........', help='Fragment number of the next fragment (from 1 to INT_MAX) (default 1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='mov_gamma', type='float', flags='E..........', help='gamma value for gama atom (from 0 to 10) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_interleave', type='int', flags='E..........', help='Interleave samples within fragments (max number of consecutive samples, lower is tighter interleaving, but with more overhead) (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_scheme', type='string', flags='E..........', help='Configures the encryption scheme, allowed values are none, cenc-aes-ctr', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_key', type='binary', flags='E..........', help='The media encryption key (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_kid', type='binary', flags='E..........', help='The media encryption key identifier (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_stream_ids_as_track_ids', type='boolean', flags='E..........', help='use stream ids as track ids (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_btrt', type='boolean', flags='E..........', help='force or disable writing btrt (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_tmcd', type='boolean', flags='E..........', help='force or disable writing tmcd (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_prft', type='int', flags='E..........', help='Write producer reference time box with specified time source (from 0 to 2) (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='wallclock', help='', flags='E..........', value='1'), FFMpegOptionChoice(name='pts', help='', flags='E..........', value='2'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='empty_hdlr_name', type='boolean', flags='E..........', help='write zero-length name string in hdlr atoms within mdia and minf atoms (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movie_timescale', type='int', flags='E..........', help='set movie timescale (from 1 to INT_MAX) (default 1000)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codec_option[wav-demuxer]
  list([
    FFMpegAVOption(section='WAV demuxer AVOptions:', name='ignore_length', type='boolean', flags='.D.........', help='Ignore length (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='WAV demuxer AVOptions:', name='max_size', type='int', flags='.D.........', help='max size of single packet (from 1024 to 4.1943e+06) (default 4096)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codecs_help_text[demuxers]
  list([
    FFMpegMuxerBase(name='3dostr', flags='D ', description='3DO STR', options=()),
    FFMpegMuxerBase(name='4xm', flags='D ', description='4X Technologies', options=()),
    FFMpegMuxerBase(name='aa', flags='D ', description='Audible AA format files', options=()),
    FFMpegMuxerBase(name='aac', flags='D ', description='raw ADTS AAC (Advanced Audio Coding)', options=()),
    FFMpegMuxerBase(name='aax', flags='D ', description='CRI AAX', options=()),
    FFMpegMuxerBase(name='ac3', flags='D ', description='raw AC-3', options=()),
    FFMpegMuxerBase(name='ac4', flags='D ', description='raw AC-4', options=()),
    FFMpegMuxerBase(name='ace', flags='D ', description='tri-Ace Audio Container', options=()),
    FFMpegMuxerBase(name='acm', flags='D ', description='Interplay ACM', options=()),
    FFMpegMuxerBase(name='act', flags='D ', description='ACT Voice file format', options=()),
    FFMpegMuxerBase(name='adf', flags='D ', description='Artworx Data Format', options=()),
    FFMpegMuxerBase(name='adp', flags='D ', description='ADP', options=()),
    FFMpegMuxerBase(name='ads', flags='D ', description='Sony PS2 ADS', options=()),
    FFMpegMuxerBase(name='adx', flags='D ', description='CRI ADX', options=()),
    FFMpegMuxerBase(name='aea', flags='D ', description='MD STUDIO audio', options=()),
    FFMpegMuxerBase(name='afc', flags='D ', description='AFC', options=()),
    FFMpegMuxerBase(name='aiff', flags='D ', description='Audio IFF', options=()),
    FFMpegMuxerBase(name='aix', flags='D ', description='CRI AIX', options=()),
    FFMpegMuxerBase(name='alaw', flags='D ', description='PCM A-law', options=()),
    FFMpegMuxerBase(name='alias_pix', flags='D ', description='Alias/Wavefront PIX image', options=()),
    FFMpegMuxerBase(name='alp', flags='D ', description='LEGO Racers ALP', options=()),
    FFMpegMuxerBase(name='alsa', flags='D ', description='ALSA audio input', options=()),
    FFMpegMuxerBase(name='amr', flags='D ', description='3GPP AMR', options=()),
    FFMpegMuxerBase(name='amrnb', flags='D ', description='raw AMR-NB', options=()),
    FFMpegMuxerBase(name='amrwb', flags='D ', description='raw AMR-WB', options=()),
    FFMpegMuxerBase(name='anm', flags='D ', description='Deluxe Paint Animation', options=()),
    FFMpegMuxerBase(name='apac', flags='D ', description='raw APAC', options=()),
    FFMpegMuxerBase(name='apc', flags='D ', description='CRYO APC', options=()),
    FFMpegMuxerBase(name='ape', flags='D ', description="Monkey's Audio", options=()),
    FFMpegMuxerBase(name='apm', flags='D ', description='Ubisoft Rayman 2 APM', options=()),
    FFMpegMuxerBase(name='apng', flags='D ', description='Animated Portable Network Graphics', options=()),
    FFMpegMuxerBase(name='aptx', flags='D ', description='raw aptX', options=()),
    FFMpegMuxerBase(name='aptx_hd', flags='D ', description='raw aptX HD', options=()),
    FFMpegMuxerBase(name='aqtitle', flags='D ', description='AQTitle subtitles', options=()),
    FFMpegMuxerBase(name='argo_asf', flags='D ', description='Argonaut Games ASF', options=()),
    FFMpegMuxerBase(name='argo_brp', flags='D ', description='Argonaut Games BRP', options=()),
    FFMpegMuxerBase(name='argo_cvg', flags='D ', description='Argonaut Games CVG', options=()),
    FFMpegMuxerBase(name='asf', flags='D ', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegMuxerBase(name='asf_o', flags='D ', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegMuxerBase(name='ass', flags='D ', description='SSA (SubStation Alpha) subtitle', options=()),
    FFMpegMuxerBase(name='ast', flags='D ', description='AST (Audio Stream)', options=()),
    FFMpegMuxerBase(name='au', flags='D ', description='Sun AU', options=()),
    FFMpegMuxerBase(name='av1', flags='D ', description='AV1 Annex B', options=()),
    FFMpegMuxerBase(name='avi', flags='D ', description='AVI (Audio Video Interleaved)', options=()),
    FFMpegMuxerBase(name='avr', flags='D ', description='AVR (Audio Visual Research)', options=()),
    FFMpegMuxerBase(name='avs', flags='D ', description='Argonaut Games Creature Shock', options=()),
    FFMpegMuxerBase(name='avs2', flags='D ', description='raw AVS2-P2/IEEE1857.4', options=()),
    FFMpegMuxerBase(name='avs3', flags='D ', description='raw AVS3-P2/IEEE1857.10', options=()),
    FFMpegMuxerBase(name='bethsoftvid', flags='D ', description='Bethesda Softworks VID', options=()),
    FFMpegMuxerBase(name='bfi', flags='D ', description='Brute Force & Ignorance', options=()),
    FFMpegMuxerBase(name='bfstm', flags='D ', description='BFSTM (Binary Cafe Stream)', options=()),
    FFMpegMuxerBase(name='bin', flags='D ', description='Binary text', options=()),
    FFMpegMuxerBase(name='bink', flags='D ', description='Bink', options=()),
    FFMpegMuxerBase(name='binka', flags='D ', description='Bink Audio', options=()),
    FFMpegMuxerBase(name='bit', flags='D ', description='G.729 BIT file format', options=()),
    FFMpegMuxerBase(name='bitpacked', flags='D ', description='Bitpacked', options=()),
    FFMpegMuxerBase(name='bmp_pipe', flags='D ', description='piped bmp sequence', options=()),
    FFMpegMuxerBase(name='bmv', flags='D ', description='Discworld II BMV', options=()),
    FFMpegMuxerBase(name='boa', flags='D ', description='Black Ops Audio', options=()),
    FFMpegMuxerBase(name='bonk', flags='D ', description='raw Bonk', options=()),
    FFMpegMuxerBase(name='brender_pix', flags='D ', description='BRender PIX image', options=()),
    FFMpegMuxerBase(name='brstm', flags='D ', description='BRSTM (Binary Revolution Stream)', options=()),
    FFMpegMuxerBase(name='c93', flags='D ', description='Interplay C93', options=()),
    FFMpegMuxerBase(name='caf', flags='D ', description='Apple CAF (Core Audio Format)', options=()),
    FFMpegMuxerBase(name='cavsvideo', flags='D ', description='raw Chinese AVS (Audio Video Standard)', options=()),
    FFMpegMuxerBase(name='cdg', flags='D ', description='CD Graphics', options=()),
    FFMpegMuxerBase(name='cdxl', flags='D ', description='Commodore CDXL video', options=()),
    FFMpegMuxerBase(name='cine', flags='D ', description='Phantom Cine', options=()),
    FFMpegMuxerBase(name='codec2', flags='D ', description='codec2 .c2 demuxer', options=()),
    FFMpegMuxerBase(name='codec2raw', flags='D ', description='raw codec2 demuxer', options=()),
    FFMpegMuxerBase(name='concat', flags='D ', description='Virtual concatenation script', options=()),
    FFMpegMuxerBase(name='cri_pipe', flags='D ', description='piped cri sequence', options=()),
    FFMpegMuxerBase(name='dash', flags='D ', description='Dynamic Adaptive Streaming over HTTP', options=()),
    FFMpegMuxerBase(name='data', flags='D ', description='raw data', options=()),
    FFMpegMuxerBase(name='daud', flags='D ', description='D-Cinema audio', options=()),
    FFMpegMuxerBase(name='dcstr', flags='D ', description='Sega DC STR', options=()),
    FFMpegMuxerBase(name='dds_pipe', flags='D ', description='piped dds sequence', options=()),
    FFMpegMuxerBase(name='derf', flags='D ', description='Xilam DERF', options=()),
    FFMpegMuxerBase(name='dfa', flags='D ', description='Chronomaster DFA', options=()),
    FFMpegMuxerBase(name='dfpwm', flags='D ', description='raw DFPWM1a', options=()),
    FFMpegMuxerBase(name='dhav', flags='D ', description='Video DAV', options=()),
    FFMpegMuxerBase(name='dirac', flags='D ', description='raw Dirac', options=()),
    FFMpegMuxerBase(name='dnxhd', flags='D ', description='raw DNxHD (SMPTE VC-3)', options=()),
    FFMpegMuxerBase(name='dpx_pipe', flags='D ', description='piped dpx sequence', options=()),
    FFMpegMuxerBase(name='dsf', flags='D ', description='DSD Stream File (DSF)', options=()),
    FFMpegMuxerBase(name='dsicin', flags='D ', description='Delphine Software International CIN', options=()),
    FFMpegMuxerBase(name='dss', flags='D ', description='Digital Speech Standard (DSS)', options=()),
    FFMpegMuxerBase(name='dts', flags='D ', description='raw DTS', options=()),
    FFMpegMuxerBase(name='dtshd', flags='D ', description='raw DTS-HD', options=()),
    FFMpegMuxerBase(name='dv', flags='D ', description='DV (Digital Video)', options=()),
    FFMpegMuxerBase(name='dvbsub', flags='D ', description='raw dvbsub', options=()),
    FFMpegMuxerBase(name='dvbtxt', flags='D ', description='dvbtxt', options=()),
    FFMpegMuxerBase(name='dxa', flags='D ', description='DXA', options=()),
    FFMpegMuxerBase(name='ea', flags='D ', description='Electronic Arts Multimedia', options=()),
    FFMpegMuxerBase(name='ea_cdata', flags='D ', description='Electronic Arts cdata', options=()),
    FFMpegMuxerBase(name='eac3', flags='D ', description='raw E-AC-3', options=()),
    FFMpegMuxerBase(name='epaf', flags='D ', description='Ensoniq Paris Audio File', options=()),
    FFMpegMuxerBase(name='evc', flags='D ', description='EVC Annex B', options=()),
    FFMpegMuxerBase(name='exr_pipe', flags='D ', description='piped exr sequence', options=()),
    FFMpegMuxerBase(name='f32be', flags='D ', description='PCM 32-bit floating-point big-endian', options=()),
    FFMpegMuxerBase(name='f32le', flags='D ', description='PCM 32-bit floating-point little-endian', options=()),
    FFMpegMuxerBase(name='f64be', flags='D ', description='PCM 64-bit floating-point big-endian', options=()),
    FFMpegMuxerBase(name='f64le', flags='D ', description='PCM 64-bit floating-point little-endian', options=()),
    FFMpegMuxerBase(name='fbdev', flags='D ', description='Linux framebuffer', options=()),
    FFMpegMuxerBase(name='ffmetadata', flags='D ', description='FFmpeg metadata in text', options=()),
    FFMpegMuxerBase(name='film_cpk', flags='D ', description='Sega FILM / CPK', options=()),
    FFMpegMuxerBase(name='filmstrip', flags='D ', description='Adobe Filmstrip', options=()),
    FFMpegMuxerBase(name='fits', flags='D ', description='Flexible Image Transport System', options=()),
    FFMpegMuxerBase(name='flac', flags='D ', description='raw FLAC', options=()),
    FFMpegMuxerBase(name='flic', flags='D ', description='FLI/FLC/FLX animation', options=()),
    FFMpegMuxerBase(name='flv', flags='D ', description='FLV (Flash Video)', options=()),
    FFMpegMuxerBase(name='frm', flags='D ', description='Megalux Frame', options=()),
    FFMpegMuxerBase(name='fsb', flags='D ', description='FMOD Sample Bank', options=()),
    FFMpegMuxerBase(name='fwse', flags='D ', description="Capcom's MT Framework sound", options=()),
    FFMpegMuxerBase(name='g722', flags='D ', description='raw G.722', options=()),
    FFMpegMuxerBase(name='g723_1', flags='D ', description='G.723.1', options=()),
    FFMpegMuxerBase(name='g726', flags='D ', description='raw big-endian G.726 ("left aligned")', options=()),
    FFMpegMuxerBase(name='g726le', flags='D ', description='raw little-endian G.726 ("right aligned")', options=()),
    FFMpegMuxerBase(name='g729', flags='D ', description='G.729 raw format demuxer', options=()),
    FFMpegMuxerBase(name='gdv', flags='D ', description='Gremlin Digital Video', options=()),
    FFMpegMuxerBase(name='gem_pipe', flags='D ', description='piped gem sequence', options=()),
    FFMpegMuxerBase(name='genh', flags='D ', description='GENeric Header', options=()),
    FFMpegMuxerBase(name='gif', flags='D ', description='CompuServe Graphics Interchange Format (GIF)', options=()),
    FFMpegMuxerBase(name='gif_pipe', flags='D ', description='piped gif sequence', options=()),
    FFMpegMuxerBase(name='gsm', flags='D ', description='raw GSM', options=()),
    FFMpegMuxerBase(name='gxf', flags='D ', description='GXF (General eXchange Format)', options=()),
    FFMpegMuxerBase(name='h261', flags='D ', description='raw H.261', options=()),
    FFMpegMuxerBase(name='h263', flags='D ', description='raw H.263', options=()),
    FFMpegMuxerBase(name='h264', flags='D ', description='raw H.264 video', options=()),
    FFMpegMuxerBase(name='hca', flags='D ', description='CRI HCA', options=()),
    FFMpegMuxerBase(name='hcom', flags='D ', description='Macintosh HCOM', options=()),
    FFMpegMuxerBase(name='hdr_pipe', flags='D ', description='piped hdr sequence', options=()),
    FFMpegMuxerBase(name='hevc', flags='D ', description='raw HEVC video', options=()),
    FFMpegMuxerBase(name='hls', flags='D ', description='Apple HTTP Live Streaming', options=()),
    FFMpegMuxerBase(name='hnm', flags='D ', description='Cryo HNM v4', options=()),
    FFMpegMuxerBase(name='ico', flags='D ', description='Microsoft Windows ICO', options=()),
    FFMpegMuxerBase(name='idcin', flags='D ', description='id Cinematic', options=()),
    FFMpegMuxerBase(name='idf', flags='D ', description='iCE Draw File', options=()),
    FFMpegMuxerBase(name='iec61883', flags='D ', description='libiec61883 (new DV1394) A/V input device', options=()),
    FFMpegMuxerBase(name='iff', flags='D ', description='IFF (Interchange File Format)', options=()),
    FFMpegMuxerBase(name='ifv', flags='D ', description='IFV CCTV DVR', options=()),
    FFMpegMuxerBase(name='ilbc', flags='D ', description='iLBC storage', options=()),
    FFMpegMuxerBase(name='image2', flags='D ', description='image2 sequence', options=()),
    FFMpegMuxerBase(name='image2pipe', flags='D ', description='piped image2 sequence', options=()),
    FFMpegMuxerBase(name='imf', flags='D ', description='IMF (Interoperable Master Format)', options=()),
    FFMpegMuxerBase(name='ingenient', flags='D ', description='raw Ingenient MJPEG', options=()),
    FFMpegMuxerBase(name='ipmovie', flags='D ', description='Interplay MVE', options=()),
    FFMpegMuxerBase(name='ipu', flags='D ', description='raw IPU Video', options=()),
    FFMpegMuxerBase(name='ircam', flags='D ', description='Berkeley/IRCAM/CARL Sound Format', options=()),
    FFMpegMuxerBase(name='iss', flags='D ', description='Funcom ISS', options=()),
    FFMpegMuxerBase(name='iv8', flags='D ', description='IndigoVision 8000 video', options=()),
    FFMpegMuxerBase(name='ivf', flags='D ', description='On2 IVF', options=()),
    FFMpegMuxerBase(name='ivr', flags='D ', description='IVR (Internet Video Recording)', options=()),
    FFMpegMuxerBase(name='j2k_pipe', flags='D ', description='piped j2k sequence', options=()),
    FFMpegMuxerBase(name='jack', flags='D ', description='JACK Audio Connection Kit', options=()),
    FFMpegMuxerBase(name='jacosub', flags='D ', description='JACOsub subtitle format', options=()),
    FFMpegMuxerBase(name='jpeg_pipe', flags='D ', description='piped jpeg sequence', options=()),
    FFMpegMuxerBase(name='jpegls_pipe', flags='D ', description='piped jpegls sequence', options=()),
    FFMpegMuxerBase(name='jpegxl_anim', flags='D ', description='Animated JPEG XL', options=()),
    FFMpegMuxerBase(name='jpegxl_pipe', flags='D ', description='piped jpegxl sequence', options=()),
    FFMpegMuxerBase(name='jv', flags='D ', description='Bitmap Brothers JV', options=()),
    FFMpegMuxerBase(name='kmsgrab', flags='D ', description='KMS screen capture', options=()),
    FFMpegMuxerBase(name='kux', flags='D ', description='KUX (YouKu)', options=()),
    FFMpegMuxerBase(name='kvag', flags='D ', description='Simon & Schuster Interactive VAG', options=()),
    FFMpegMuxerBase(name='laf', flags='D ', description='LAF (Limitless Audio Format)', options=()),
    FFMpegMuxerBase(name='lavfi', flags='D ', description='Libavfilter virtual input device', options=()),
    FFMpegMuxerBase(name='libcdio', flags='D ', description='', options=()),
    FFMpegMuxerBase(name='libdc1394', flags='D ', description='dc1394 v.2 A/V grab', options=()),
    FFMpegMuxerBase(name='libgme', flags='D ', description='Game Music Emu demuxer', options=()),
    FFMpegMuxerBase(name='libopenmpt', flags='D ', description='Tracker formats (libopenmpt)', options=()),
    FFMpegMuxerBase(name='live_flv', flags='D ', description='live RTMP FLV (Flash Video)', options=()),
    FFMpegMuxerBase(name='lmlm4', flags='D ', description='raw lmlm4', options=()),
    FFMpegMuxerBase(name='loas', flags='D ', description='LOAS AudioSyncStream', options=()),
    FFMpegMuxerBase(name='lrc', flags='D ', description='LRC lyrics', options=()),
    FFMpegMuxerBase(name='luodat', flags='D ', description='Video CCTV DAT', options=()),
    FFMpegMuxerBase(name='lvf', flags='D ', description='LVF', options=()),
    FFMpegMuxerBase(name='lxf', flags='D ', description='VR native stream (LXF)', options=()),
    FFMpegMuxerBase(name='m4v', flags='D ', description='raw MPEG-4 video', options=()),
    FFMpegMuxerBase(name='mca', flags='D ', description='MCA Audio Format', options=()),
    FFMpegMuxerBase(name='mcc', flags='D ', description='MacCaption', options=()),
    FFMpegMuxerBase(name='mgsts', flags='D ', description='Metal Gear Solid: The Twin Snakes', options=()),
    FFMpegMuxerBase(name='microdvd', flags='D ', description='MicroDVD subtitle format', options=()),
    FFMpegMuxerBase(name='mjpeg', flags='D ', description='raw MJPEG video', options=()),
    FFMpegMuxerBase(name='mjpeg_2000', flags='D ', description='raw MJPEG 2000 video', options=()),
    FFMpegMuxerBase(name='mlp', flags='D ', description='raw MLP', options=()),
    FFMpegMuxerBase(name='mlv', flags='D ', description='Magic Lantern Video (MLV)', options=()),
    FFMpegMuxerBase(name='mm', flags='D ', description='American Laser Games MM', options=()),
    FFMpegMuxerBase(name='mmf', flags='D ', description='Yamaha SMAF', options=()),
    FFMpegMuxerBase(name='mods', flags='D ', description='MobiClip MODS', options=()),
    FFMpegMuxerBase(name='moflex', flags='D ', description='MobiClip MOFLEX', options=()),
    FFMpegMuxerBase(name='mp3', flags='D ', description='MP2/3 (MPEG audio layer 2/3)', options=()),
    FFMpegMuxerBase(name='mpc', flags='D ', description='Musepack', options=()),
    FFMpegMuxerBase(name='mpc8', flags='D ', description='Musepack SV8', options=()),
    FFMpegMuxerBase(name='mpeg', flags='D ', description='MPEG-PS (MPEG-2 Program Stream)', options=()),
    FFMpegMuxerBase(name='mpegts', flags='D ', description='MPEG-TS (MPEG-2 Transport Stream)', options=()),
    FFMpegMuxerBase(name='mpegtsraw', flags='D ', description='raw MPEG-TS (MPEG-2 Transport Stream)', options=()),
    FFMpegMuxerBase(name='mpegvideo', flags='D ', description='raw MPEG video', options=()),
    FFMpegMuxerBase(name='mpjpeg', flags='D ', description='MIME multipart JPEG', options=()),
    FFMpegMuxerBase(name='mpl2', flags='D ', description='MPL2 subtitles', options=()),
    FFMpegMuxerBase(name='mpsub', flags='D ', description='MPlayer subtitles', options=()),
    FFMpegMuxerBase(name='msf', flags='D ', description='Sony PS3 MSF', options=()),
    FFMpegMuxerBase(name='msnwctcp', flags='D ', description='MSN TCP Webcam stream', options=()),
    FFMpegMuxerBase(name='msp', flags='D ', description='Microsoft Paint (MSP))', options=()),
    FFMpegMuxerBase(name='mtaf', flags='D ', description='Konami PS2 MTAF', options=()),
    FFMpegMuxerBase(name='mtv', flags='D ', description='MTV', options=()),
    FFMpegMuxerBase(name='mulaw', flags='D ', description='PCM mu-law', options=()),
    FFMpegMuxerBase(name='musx', flags='D ', description='Eurocom MUSX', options=()),
    FFMpegMuxerBase(name='mv', flags='D ', description='Silicon Graphics Movie', options=()),
    FFMpegMuxerBase(name='mvi', flags='D ', description='Motion Pixels MVI', options=()),
    FFMpegMuxerBase(name='mxf', flags='D ', description='MXF (Material eXchange Format)', options=()),
    FFMpegMuxerBase(name='mxg', flags='D ', description='MxPEG clip', options=()),
    FFMpegMuxerBase(name='nc', flags='D ', description='NC camera feed', options=()),
    FFMpegMuxerBase(name='nistsphere', flags='D ', description='NIST SPeech HEader REsources', options=()),
    FFMpegMuxerBase(name='nsp', flags='D ', description='Computerized Speech Lab NSP', options=()),
    FFMpegMuxerBase(name='nsv', flags='D ', description='Nullsoft Streaming Video', options=()),
    FFMpegMuxerBase(name='nut', flags='D ', description='NUT', options=()),
    FFMpegMuxerBase(name='nuv', flags='D ', description='NuppelVideo', options=()),
    FFMpegMuxerBase(name='obu', flags='D ', description='AV1 low overhead OBU', options=()),
    FFMpegMuxerBase(name='ogg', flags='D ', description='Ogg', options=()),
    FFMpegMuxerBase(name='oma', flags='D ', description='Sony OpenMG audio', options=()),
    FFMpegMuxerBase(name='openal', flags='D ', description='OpenAL audio capture device', options=()),
    FFMpegMuxerBase(name='osq', flags='D ', description='raw OSQ', options=()),
    FFMpegMuxerBase(name='oss', flags='D ', description='OSS (Open Sound System) capture', options=()),
    FFMpegMuxerBase(name='paf', flags='D ', description='Amazing Studio Packed Animation File', options=()),
    FFMpegMuxerBase(name='pam_pipe', flags='D ', description='piped pam sequence', options=()),
    FFMpegMuxerBase(name='pbm_pipe', flags='D ', description='piped pbm sequence', options=()),
    FFMpegMuxerBase(name='pcx_pipe', flags='D ', description='piped pcx sequence', options=()),
    FFMpegMuxerBase(name='pdv', flags='D ', description='PlayDate Video', options=()),
    FFMpegMuxerBase(name='pfm_pipe', flags='D ', description='piped pfm sequence', options=()),
    FFMpegMuxerBase(name='pgm_pipe', flags='D ', description='piped pgm sequence', options=()),
    FFMpegMuxerBase(name='pgmyuv_pipe', flags='D ', description='piped pgmyuv sequence', options=()),
    FFMpegMuxerBase(name='pgx_pipe', flags='D ', description='piped pgx sequence', options=()),
    FFMpegMuxerBase(name='phm_pipe', flags='D ', description='piped phm sequence', options=()),
    FFMpegMuxerBase(name='photocd_pipe', flags='D ', description='piped photocd sequence', options=()),
    FFMpegMuxerBase(name='pictor_pipe', flags='D ', description='piped pictor sequence', options=()),
    FFMpegMuxerBase(name='pjs', flags='D ', description='PJS (Phoenix Japanimation Society) subtitles', options=()),
    FFMpegMuxerBase(name='pmp', flags='D ', description='Playstation Portable PMP', options=()),
    FFMpegMuxerBase(name='png_pipe', flags='D ', description='piped png sequence', options=()),
    FFMpegMuxerBase(name='pp_bnk', flags='D ', description='Pro Pinball Series Soundbank', options=()),
    FFMpegMuxerBase(name='ppm_pipe', flags='D ', description='piped ppm sequence', options=()),
    FFMpegMuxerBase(name='psd_pipe', flags='D ', description='piped psd sequence', options=()),
    FFMpegMuxerBase(name='psxstr', flags='D ', description='Sony Playstation STR', options=()),
    FFMpegMuxerBase(name='pulse', flags='D ', description='Pulse audio input', options=()),
    FFMpegMuxerBase(name='pva', flags='D ', description='TechnoTrend PVA', options=()),
    FFMpegMuxerBase(name='pvf', flags='D ', description='PVF (Portable Voice Format)', options=()),
    FFMpegMuxerBase(name='qcp', flags='D ', description='QCP', options=()),
    FFMpegMuxerBase(name='qdraw_pipe', flags='D ', description='piped qdraw sequence', options=()),
    FFMpegMuxerBase(name='qoi_pipe', flags='D ', description='piped qoi sequence', options=()),
    FFMpegMuxerBase(name='r3d', flags='D ', description='REDCODE R3D', options=()),
    FFMpegMuxerBase(name='rawvideo', flags='D ', description='raw video', options=()),
    FFMpegMuxerBase(name='realtext', flags='D ', description='RealText subtitle format', options=()),
    FFMpegMuxerBase(name='redspark', flags='D ', description='RedSpark', options=()),
    FFMpegMuxerBase(name='rka', flags='D ', description='RKA (RK Audio)', options=()),
    FFMpegMuxerBase(name='rl2', flags='D ', description='RL2', options=()),
    FFMpegMuxerBase(name='rm', flags='D ', description='RealMedia', options=()),
    FFMpegMuxerBase(name='roq', flags='D ', description='id RoQ', options=()),
    FFMpegMuxerBase(name='rpl', flags='D ', description='RPL / ARMovie', options=()),
    FFMpegMuxerBase(name='rsd', flags='D ', description='GameCube RSD', options=()),
    FFMpegMuxerBase(name='rso', flags='D ', description='Lego Mindstorms RSO', options=()),
    FFMpegMuxerBase(name='rtp', flags='D ', description='RTP input', options=()),
    FFMpegMuxerBase(name='rtsp', flags='D ', description='RTSP input', options=()),
    FFMpegMuxerBase(name='s16be', flags='D ', description='PCM signed 16-bit big-endian', options=()),
    FFMpegMuxerBase(name='s16le', flags='D ', description='PCM signed 16-bit little-endian', options=()),
    FFMpegMuxerBase(name='s24be', flags='D ', description='PCM signed 24-bit big-endian', options=()),
    FFMpegMuxerBase(name='s24le', flags='D ', description='PCM signed 24-bit little-endian', options=()),
    FFMpegMuxerBase(name='s32be', flags='D ', description='PCM signed 32-bit big-endian', options=()),
    FFMpegMuxerBase(name='s32le', flags='D ', description='PCM signed 32-bit little-endian', options=()),
    FFMpegMuxerBase(name='s337m', flags='D ', description='SMPTE 337M', options=()),
    FFMpegMuxerBase(name='s8', flags='D ', description='PCM signed 8-bit', options=()),
    FFMpegMuxerBase(name='sami', flags='D ', description='SAMI subtitle format', options=()),
    FFMpegMuxerBase(name='sap', flags='D ', description='SAP input', options=()),
    FFMpegMuxerBase(name='sbc', flags='D ', description='raw SBC (low-complexity subband codec)', options=()),
    FFMpegMuxerBase(name='sbg', flags='D ', description='SBaGen binaural beats script', options=()),
    FFMpegMuxerBase(name='scc', flags='D ', description='Scenarist Closed Captions', options=()),
    FFMpegMuxerBase(name='scd', flags='D ', description='Square Enix SCD', options=()),
    FFMpegMuxerBase(name='sdns', flags='D ', description='Xbox SDNS', options=()),
    FFMpegMuxerBase(name='sdp', flags='D ', description='SDP', options=()),
    FFMpegMuxerBase(name='sdr2', flags='D ', description='SDR2', options=()),
    FFMpegMuxerBase(name='sds', flags='D ', description='MIDI Sample Dump Standard', options=()),
    FFMpegMuxerBase(name='sdx', flags='D ', description='Sample Dump eXchange', options=()),
    FFMpegMuxerBase(name='ser', flags='D ', description='SER (Simple uncompressed video format for astronomical capturing)', options=()),
    FFMpegMuxerBase(name='sga', flags='D ', description='Digital Pictures SGA', options=()),
    FFMpegMuxerBase(name='sgi_pipe', flags='D ', description='piped sgi sequence', options=()),
    FFMpegMuxerBase(name='shn', flags='D ', description='raw Shorten', options=()),
    FFMpegMuxerBase(name='siff', flags='D ', description='Beam Software SIFF', options=()),
    FFMpegMuxerBase(name='simbiosis_imx', flags='D ', description='Simbiosis Interactive IMX', options=()),
    FFMpegMuxerBase(name='sln', flags='D ', description='Asterisk raw pcm', options=()),
    FFMpegMuxerBase(name='smjpeg', flags='D ', description='Loki SDL MJPEG', options=()),
    FFMpegMuxerBase(name='smk', flags='D ', description='Smacker', options=()),
    FFMpegMuxerBase(name='smush', flags='D ', description='LucasArts Smush', options=()),
    FFMpegMuxerBase(name='sol', flags='D ', description='Sierra SOL', options=()),
    FFMpegMuxerBase(name='sox', flags='D ', description='SoX (Sound eXchange) native', options=()),
    FFMpegMuxerBase(name='spdif', flags='D ', description='IEC 61937 (compressed data in S/PDIF)', options=()),
    FFMpegMuxerBase(name='srt', flags='D ', description='SubRip subtitle', options=()),
    FFMpegMuxerBase(name='stl', flags='D ', description='Spruce subtitle format', options=()),
    FFMpegMuxerBase(name='subviewer', flags='D ', description='SubViewer subtitle format', options=()),
    FFMpegMuxerBase(name='subviewer1', flags='D ', description='SubViewer v1 subtitle format', options=()),
    FFMpegMuxerBase(name='sunrast_pipe', flags='D ', description='piped sunrast sequence', options=()),
    FFMpegMuxerBase(name='sup', flags='D ', description='raw HDMV Presentation Graphic Stream subtitles', options=()),
    FFMpegMuxerBase(name='svag', flags='D ', description='Konami PS2 SVAG', options=()),
    FFMpegMuxerBase(name='svg_pipe', flags='D ', description='piped svg sequence', options=()),
    FFMpegMuxerBase(name='svs', flags='D ', description='Square SVS', options=()),
    FFMpegMuxerBase(name='swf', flags='D ', description='SWF (ShockWave Flash)', options=()),
    FFMpegMuxerBase(name='tak', flags='D ', description='raw TAK', options=()),
    FFMpegMuxerBase(name='tedcaptions', flags='D ', description='TED Talks captions', options=()),
    FFMpegMuxerBase(name='thp', flags='D ', description='THP', options=()),
    FFMpegMuxerBase(name='tiertexseq', flags='D ', description='Tiertex Limited SEQ', options=()),
    FFMpegMuxerBase(name='tiff_pipe', flags='D ', description='piped tiff sequence', options=()),
    FFMpegMuxerBase(name='tmv', flags='D ', description='8088flex TMV', options=()),
    FFMpegMuxerBase(name='truehd', flags='D ', description='raw TrueHD', options=()),
    FFMpegMuxerBase(name='tta', flags='D ', description='TTA (True Audio)', options=()),
    FFMpegMuxerBase(name='tty', flags='D ', description='Tele-typewriter', options=()),
    FFMpegMuxerBase(name='txd', flags='D ', description='Renderware TeXture Dictionary', options=()),
    FFMpegMuxerBase(name='ty', flags='D ', description='TiVo TY Stream', options=()),
    FFMpegMuxerBase(name='u16be', flags='D ', description='PCM unsigned 16-bit big-endian', options=()),
    FFMpegMuxerBase(name='u16le', flags='D ', description='PCM unsigned 16-bit little-endian', options=()),
    FFMpegMuxerBase(name='u24be', flags='D ', description='PCM unsigned 24-bit big-endian', options=()),
    FFMpegMuxerBase(name='u24le', flags='D ', description='PCM unsigned 24-bit little-endian', options=()),
    FFMpegMuxerBase(name='u32be', flags='D ', description='PCM unsigned 32-bit big-endian', options=()),
    FFMpegMuxerBase(name='u32le', flags='D ', description='PCM unsigned 32-bit little-endian', options=()),
    FFMpegMuxerBase(name='u8', flags='D ', description='PCM unsigned 8-bit', options=()),
    FFMpegMuxerBase(name='usm', flags='D ', description='CRI USM', options=()),
    FFMpegMuxerBase(name='v210', flags='D ', description='Uncompressed 4:2:2 10-bit', options=()),
    FFMpegMuxerBase(name='v210x', flags='D ', description='Uncompressed 4:2:2 10-bit', options=()),
    FFMpegMuxerBase(name='vag', flags='D ', description='Sony PS2 VAG', options=()),
    FFMpegMuxerBase(name='vbn_pipe', flags='D ', description='piped vbn sequence', options=()),
    FFMpegMuxerBase(name='vc1', flags='D ', description='raw VC-1', options=()),
    FFMpegMuxerBase(name='vc1test', flags='D ', description='VC-1 test bitstream', options=()),
    FFMpegMuxerBase(name='vidc', flags='D ', description='PCM Archimedes VIDC', options=()),
    FFMpegMuxerBase(name='vividas', flags='D ', description='Vividas VIV', options=()),
    FFMpegMuxerBase(name='vivo', flags='D ', description='Vivo', options=()),
    FFMpegMuxerBase(name='vmd', flags='D ', description='Sierra VMD', options=()),
    FFMpegMuxerBase(name='vobsub', flags='D ', description='VobSub subtitle format', options=()),
    FFMpegMuxerBase(name='voc', flags='D ', description='Creative Voice', options=()),
    FFMpegMuxerBase(name='vpk', flags='D ', description='Sony PS2 VPK', options=()),
    FFMpegMuxerBase(name='vplayer', flags='D ', description='VPlayer subtitles', options=()),
    FFMpegMuxerBase(name='vqf', flags='D ', description='Nippon Telegraph and Telephone Corporation (NTT) TwinVQ', options=()),
    FFMpegMuxerBase(name='vvc', flags='D ', description='raw H.266/VVC video', options=()),
    FFMpegMuxerBase(name='w64', flags='D ', description='Sony Wave64', options=()),
    FFMpegMuxerBase(name='wady', flags='D ', description='Marble WADY', options=()),
    FFMpegMuxerBase(name='wav', flags='D ', description='WAV / WAVE (Waveform Audio)', options=()),
    FFMpegMuxerBase(name='wavarc', flags='D ', description='Waveform Archiver', options=()),
    FFMpegMuxerBase(name='wc3movie', flags='D ', description='Wing Commander III movie', options=()),
    FFMpegMuxerBase(name='webm_dash_manifest', flags='D ', description='WebM DASH Manifest', options=()),
    FFMpegMuxerBase(name='webp_pipe', flags='D ', description='piped webp sequence', options=()),
    FFMpegMuxerBase(name='webvtt', flags='D ', description='WebVTT subtitle', options=()),
    FFMpegMuxerBase(name='wsaud', flags='D ', description='Westwood Studios audio', options=()),
    FFMpegMuxerBase(name='wsd', flags='D ', description='Wideband Single-bit Data (WSD)', options=()),
    FFMpegMuxerBase(name='wsvqa', flags='D ', description='Westwood Studios VQA', options=()),
    FFMpegMuxerBase(name='wtv', flags='D ', description='Windows Television (WTV)', options=()),
    FFMpegMuxerBase(name='wv', flags='D ', description='WavPack', options=()),
    FFMpegMuxerBase(name='wve', flags='D ', description='Psion 3 audio', options=()),
    FFMpegMuxerBase(name='x11grab', flags='D ', description='X11 screen capture, using XCB', options=()),
    FFMpegMuxerBase(name='xa', flags='D ', description='Maxis XA', options=()),
    FFMpegMuxerBase(name='xbin', flags='D ', description='eXtended BINary text (XBIN)', options=()),
    FFMpegMuxerBase(name='xbm_pipe', flags='D ', description='piped xbm sequence', options=()),
    FFMpegMuxerBase(name='xmd', flags='D ', description='Konami XMD', options=()),
    FFMpegMuxerBase(name='xmv', flags='D ', description='Microsoft XMV', options=()),
    FFMpegMuxerBase(name='xpm_pipe', flags='D ', description='piped xpm sequence', options=()),
    FFMpegMuxerBase(name='xvag', flags='D ', description='Sony PS3 XVAG', options=()),
    FFMpegMuxerBase(name='xwd_pipe', flags='D ', description='piped xwd sequence', options=()),
    FFMpegMuxerBase(name='xwma', flags='D ', description='Microsoft xWMA', options=()),
    FFMpegMuxerBase(name='yop', flags='D ', description='Psygnosis YOP', options=()),
    FFMpegMuxerBase(name='yuv4mpegpipe', flags='D ', description='YUV4MPEG pipe', options=()),
  ])
# ---
# name: test_parse_codecs_help_text[muxers]
  list([
    FFMpegMuxerBase(name='3g2', flags=' E', description='3GP2 (3GPP2 file format)', options=()),
    FFMpegMuxerBase(name='3gp', flags=' E', description='3GP (3GPP file format)', options=()),
    FFMpegMuxerBase(name='a64', flags=' E', description='a64 - video for Commodore 64', options=()),
    FFMpegMuxerBase(name='ac3', flags=' E', description='raw AC-3', options=()),
    FFMpegMuxerBase(name='ac4', flags=' E', description='raw AC-4', options=()),
    FFMpegMuxerBase(name='adts', flags=' E', description='ADTS AAC (Advanced Audio Coding)', options=()),
    FFMpegMuxerBase(name='adx', flags=' E', description='CRI ADX', options=()),
    FFMpegMuxerBase(name='aiff', flags=' E', description='Audio IFF', options=()),
    FFMpegMuxerBase(name='alaw', flags=' E', description='PCM A-law', options=()),
    FFMpegMuxerBase(name='alp', flags=' E', description='LEGO Racers ALP', options=()),
    FFMpegMuxerBase(name='alsa', flags=' E', description='ALSA audio output', options=()),
    FFMpegMuxerBase(name='amr', flags=' E', description='3GPP AMR', options=()),
    FFMpegMuxerBase(name='amv', flags=' E', description='AMV', options=()),
    FFMpegMuxerBase(name='apm', flags=' E', description='Ubisoft Rayman 2 APM', options=()),
    FFMpegMuxerBase(name='apng', flags=' E', description='Animated Portable Network Graphics', options=()),
    FFMpegMuxerBase(name='aptx', flags=' E', description='raw aptX (Audio Processing Technology for Bluetooth)', options=()),
    FFMpegMuxerBase(name='aptx_hd', flags=' E', description='raw aptX HD (Audio Processing Technology for Bluetooth)', options=()),
    FFMpegMuxerBase(name='argo_asf', flags=' E', description='Argonaut Games ASF', options=()),
    FFMpegMuxerBase(name='argo_cvg', flags=' E', description='Argonaut Games CVG', options=()),
    FFMpegMuxerBase(name='asf', flags=' E', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegMuxerBase(name='asf_stream', flags=' E', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegMuxerBase(name='ass', flags=' E', description='SSA (SubStation Alpha) subtitle', options=()),
    FFMpegMuxerBase(name='ast', flags=' E', description='AST (Audio Stream)', options=()),
    FFMpegMuxerBase(name='au', flags=' E', description='Sun AU', options=()),
    FFMpegMuxerBase(name='avi', flags=' E', description='AVI (Audio Video Interleaved)', options=()),
    FFMpegMuxerBase(name='avif', flags=' E', description='AVIF', options=()),
    FFMpegMuxerBase(name='avm2', flags=' E', description='SWF (ShockWave Flash) (AVM2)', options=()),
    FFMpegMuxerBase(name='avs2', flags=' E', description='raw AVS2-P2/IEEE1857.4 video', options=()),
    FFMpegMuxerBase(name='avs3', flags=' E', description='AVS3-P2/IEEE1857.10', options=()),
    FFMpegMuxerBase(name='bit', flags=' E', description='G.729 BIT file format', options=()),
    FFMpegMuxerBase(name='caca', flags=' E', description='caca (color ASCII art) output device', options=()),
    FFMpegMuxerBase(name='caf', flags=' E', description='Apple CAF (Core Audio Format)', options=()),
    FFMpegMuxerBase(name='cavsvideo', flags=' E', description='raw Chinese AVS (Audio Video Standard) video', options=()),
    FFMpegMuxerBase(name='chromaprint', flags=' E', description='Chromaprint', options=()),
    FFMpegMuxerBase(name='codec2', flags=' E', description='codec2 .c2 muxer', options=()),
    FFMpegMuxerBase(name='codec2raw', flags=' E', description='raw codec2 muxer', options=()),
    FFMpegMuxerBase(name='crc', flags=' E', description='CRC testing', options=()),
    FFMpegMuxerBase(name='dash', flags=' E', description='DASH Muxer', options=()),
    FFMpegMuxerBase(name='data', flags=' E', description='raw data', options=()),
    FFMpegMuxerBase(name='daud', flags=' E', description='D-Cinema audio', options=()),
    FFMpegMuxerBase(name='dfpwm', flags=' E', description='raw DFPWM1a', options=()),
    FFMpegMuxerBase(name='dirac', flags=' E', description='raw Dirac', options=()),
    FFMpegMuxerBase(name='dnxhd', flags=' E', description='raw DNxHD (SMPTE VC-3)', options=()),
    FFMpegMuxerBase(name='dts', flags=' E', description='raw DTS', options=()),
    FFMpegMuxerBase(name='dv', flags=' E', description='DV (Digital Video)', options=()),
    FFMpegMuxerBase(name='dvd', flags=' E', description='MPEG-2 PS (DVD VOB)', options=()),
    FFMpegMuxerBase(name='eac3', flags=' E', description='raw E-AC-3', options=()),
    FFMpegMuxerBase(name='evc', flags=' E', description='raw EVC video', options=()),
    FFMpegMuxerBase(name='f32be', flags=' E', description='PCM 32-bit floating-point big-endian', options=()),
    FFMpegMuxerBase(name='f32le', flags=' E', description='PCM 32-bit floating-point little-endian', options=()),
    FFMpegMuxerBase(name='f4v', flags=' E', description='F4V Adobe Flash Video', options=()),
    FFMpegMuxerBase(name='f64be', flags=' E', description='PCM 64-bit floating-point big-endian', options=()),
    FFMpegMuxerBase(name='f64le', flags=' E', description='PCM 64-bit floating-point little-endian', options=()),
    FFMpegMuxerBase(name='fbdev', flags=' E', description='Linux framebuffer', options=()),
    FFMpegMuxerBase(name='ffmetadata', flags=' E', description='FFmpeg metadata in text', options=()),
    FFMpegMuxerBase(name='fifo', flags=' E', description='FIFO queue pseudo-muxer', options=()),
    FFMpegMuxerBase(name='fifo_test', flags=' E', description='Fifo test muxer', options=()),
    FFMpegMuxerBase(name='film_cpk', flags=' E', description='Sega FILM / CPK', options=()),
    FFMpegMuxerBase(name='filmstrip', flags=' E', description='Adobe Filmstrip', options=()),
    FFMpegMuxerBase(name='fits', flags=' E', description='Flexible Image Transport System', options=()),
    FFMpegMuxerBase(name='flac', flags=' E', description='raw FLAC', options=()),
    FFMpegMuxerBase(name='flv', flags=' E', description='FLV (Flash Video)', options=()),
    FFMpegMuxerBase(name='framecrc', flags=' E', description='framecrc testing', options=()),
    FFMpegMuxerBase(name='framehash', flags=' E', description='Per-frame hash testing', options=()),
    FFMpegMuxerBase(name='framemd5', flags=' E', description='Per-frame MD5 testing', options=()),
    FFMpegMuxerBase(name='g722', flags=' E', description='raw G.722', options=()),
    FFMpegMuxerBase(name='g723_1', flags=' E', description='raw G.723.1', options=()),
    FFMpegMuxerBase(name='g726', flags=' E', description='raw big-endian G.726 ("left-justified")', options=()),
    FFMpegMuxerBase(name='g726le', flags=' E', description='raw little-endian G.726 ("right-justified")', options=()),
    FFMpegMuxerBase(name='gif', flags=' E', description='CompuServe Graphics Interchange Format (GIF)', options=()),
    FFMpegMuxerBase(name='gsm', flags=' E', description='raw GSM', options=()),
    FFMpegMuxerBase(name='gxf', flags=' E', description='GXF (General eXchange Format)', options=()),
    FFMpegMuxerBase(name='h261', flags=' E', description='raw H.261', options=()),
    FFMpegMuxerBase(name='h263', flags=' E', description='raw H.263', options=()),
    FFMpegMuxerBase(name='h264', flags=' E', description='raw H.264 video', options=()),
    FFMpegMuxerBase(name='hash', flags=' E', description='Hash testing', options=()),
    FFMpegMuxerBase(name='hds', flags=' E', description='HDS Muxer', options=()),
    FFMpegMuxerBase(name='hevc', flags=' E', description='raw HEVC video', options=()),
    FFMpegMuxerBase(name='hls', flags=' E', description='Apple HTTP Live Streaming', options=()),
    FFMpegMuxerBase(name='ico', flags=' E', description='Microsoft Windows ICO', options=()),
    FFMpegMuxerBase(name='ilbc', flags=' E', description='iLBC storage', options=()),
    FFMpegMuxerBase(name='image2', flags=' E', description='image2 sequence', options=()),
    FFMpegMuxerBase(name='image2pipe', flags=' E', description='piped image2 sequence', options=()),
    FFMpegMuxerBase(name='ipod', flags=' E', description='iPod H.264 MP4 (MPEG-4 Part 14)', options=()),
    FFMpegMuxerBase(name='ircam', flags=' E', description='Berkeley/IRCAM/CARL Sound Format', options=()),
    FFMpegMuxerBase(name='ismv', flags=' E', description='ISMV/ISMA (Smooth Streaming)', options=()),
    FFMpegMuxerBase(name='ivf', flags=' E', description='On2 IVF', options=()),
    FFMpegMuxerBase(name='jacosub', flags=' E', description='JACOsub subtitle format', options=()),
    FFMpegMuxerBase(name='kvag', flags=' E', description='Simon & Schuster Interactive VAG', options=()),
    FFMpegMuxerBase(name='latm', flags=' E', description='LOAS/LATM', options=()),
    FFMpegMuxerBase(name='lrc', flags=' E', description='LRC lyrics', options=()),
    FFMpegMuxerBase(name='m4v', flags=' E', description='raw MPEG-4 video', options=()),
    FFMpegMuxerBase(name='matroska', flags=' E', description='Matroska', options=()),
    FFMpegMuxerBase(name='md5', flags=' E', description='MD5 testing', options=()),
    FFMpegMuxerBase(name='microdvd', flags=' E', description='MicroDVD subtitle format', options=()),
    FFMpegMuxerBase(name='mjpeg', flags=' E', description='raw MJPEG video', options=()),
    FFMpegMuxerBase(name='mkvtimestamp_v2', flags=' E', description='extract pts as timecode v2 format, as defined by mkvtoolnix', options=()),
    FFMpegMuxerBase(name='mlp', flags=' E', description='raw MLP', options=()),
    FFMpegMuxerBase(name='mmf', flags=' E', description='Yamaha SMAF', options=()),
    FFMpegMuxerBase(name='mov', flags=' E', description='QuickTime / MOV', options=()),
    FFMpegMuxerBase(name='mp2', flags=' E', description='MP2 (MPEG audio layer 2)', options=()),
    FFMpegMuxerBase(name='mp3', flags=' E', description='MP3 (MPEG audio layer 3)', options=()),
    FFMpegMuxerBase(name='mp4', flags=' E', description='MP4 (MPEG-4 Part 14)', options=()),
    FFMpegMuxerBase(name='mpeg', flags=' E', description='MPEG-1 Systems / MPEG program stream', options=()),
    FFMpegMuxerBase(name='mpeg1video', flags=' E', description='raw MPEG-1 video', options=()),
    FFMpegMuxerBase(name='mpeg2video', flags=' E', description='raw MPEG-2 video', options=()),
    FFMpegMuxerBase(name='mpegts', flags=' E', description='MPEG-TS (MPEG-2 Transport Stream)', options=()),
    FFMpegMuxerBase(name='mpjpeg', flags=' E', description='MIME multipart JPEG', options=()),
    FFMpegMuxerBase(name='mulaw', flags=' E', description='PCM mu-law', options=()),
    FFMpegMuxerBase(name='mxf', flags=' E', description='MXF (Material eXchange Format)', options=()),
    FFMpegMuxerBase(name='mxf_d10', flags=' E', description='MXF (Material eXchange Format) D-10 Mapping', options=()),
    FFMpegMuxerBase(name='mxf_opatom', flags=' E', description='MXF (Material eXchange Format) Operational Pattern Atom', options=()),
    FFMpegMuxerBase(name='null', flags=' E', description='raw null video', options=()),
    FFMpegMuxerBase(name='nut', flags=' E', description='NUT', options=()),
    FFMpegMuxerBase(name='obu', flags=' E', description='AV1 low overhead OBU', options=()),
    FFMpegMuxerBase(name='oga', flags=' E', description='Ogg Audio', options=()),
    FFMpegMuxerBase(name='ogg', flags=' E', description='Ogg', options=()),
    FFMpegMuxerBase(name='ogv', flags=' E', description='Ogg Video', options=()),
    FFMpegMuxerBase(name='oma', flags=' E', description='Sony OpenMG audio', options=()),
    FFMpegMuxerBase(name='opengl', flags=' E', description='OpenGL output', options=()),
    FFMpegMuxerBase(name='opus', flags=' E', description='Ogg Opus', options=()),
    FFMpegMuxerBase(name='oss', flags=' E', description='OSS (Open Sound System) playback', options=()),
    FFMpegMuxerBase(name='psp', flags=' E', description='PSP MP4 (MPEG-4 Part 14)', options=()),
    FFMpegMuxerBase(name='pulse', flags=' E', description='Pulse audio output', options=()),
    FFMpegMuxerBase(name='rawvideo', flags=' E', description='raw video', options=()),
    FFMpegMuxerBase(name='rm', flags=' E', description='RealMedia', options=()),
    FFMpegMuxerBase(name='roq', flags=' E', description='raw id RoQ', options=()),
    FFMpegMuxerBase(name='rso', flags=' E', description='Lego Mindstorms RSO', options=()),
    FFMpegMuxerBase(name='rtp', flags=' E', description='RTP output', options=()),
    FFMpegMuxerBase(name='rtp_mpegts', flags=' E', description='RTP/mpegts output format', options=()),
    FFMpegMuxerBase(name='rtsp', flags=' E', description='RTSP output', options=()),
    FFMpegMuxerBase(name='s16be', flags=' E', description='PCM signed 16-bit big-endian', options=()),
    FFMpegMuxerBase(name='s16le', flags=' E', description='PCM signed 16-bit little-endian', options=()),
    FFMpegMuxerBase(name='s24be', flags=' E', description='PCM signed 24-bit big-endian', options=()),
    FFMpegMuxerBase(name='s24le', flags=' E', description='PCM signed 24-bit little-endian', options=()),
    FFMpegMuxerBase(name='s32be', flags=' E', description='PCM signed 32-bit big-endian', options=()),
    FFMpegMuxerBase(name='s32le', flags=' E', description='PCM signed 32-bit little-endian', options=()),
    FFMpegMuxerBase(name='s8', flags=' E', description='PCM signed 8-bit', options=()),
    FFMpegMuxerBase(name='sap', flags=' E', description='SAP output', options=()),
    FFMpegMuxerBase(name='sbc', flags=' E', description='raw SBC', options=()),
    FFMpegMuxerBase(name='scc', flags=' E', description='Scenarist Closed Captions', options=()),
    FFMpegMuxerBase(name='segment', flags=' E', description='segment', options=()),
    FFMpegMuxerBase(name='smjpeg', flags=' E', description='Loki SDL MJPEG', options=()),
    FFMpegMuxerBase(name='smoothstreaming', flags=' E', description='Smooth Streaming Muxer', options=()),
    FFMpegMuxerBase(name='sox', flags=' E', description='SoX (Sound eXchange) native', options=()),
    FFMpegMuxerBase(name='spdif', flags=' E', description='IEC 61937 (used on S/PDIF - IEC958)', options=()),
    FFMpegMuxerBase(name='spx', flags=' E', description='Ogg Speex', options=()),
    FFMpegMuxerBase(name='srt', flags=' E', description='SubRip subtitle', options=()),
    FFMpegMuxerBase(name='streamhash', flags=' E', description='Per-stream hash testing', options=()),
    FFMpegMuxerBase(name='sup', flags=' E', description='raw HDMV Presentation Graphic Stream subtitles', options=()),
    FFMpegMuxerBase(name='svcd', flags=' E', description='MPEG-2 PS (SVCD)', options=()),
    FFMpegMuxerBase(name='swf', flags=' E', description='SWF (ShockWave Flash)', options=()),
    FFMpegMuxerBase(name='tee', flags=' E', description='Multiple muxer tee', options=()),
    FFMpegMuxerBase(name='truehd', flags=' E', description='raw TrueHD', options=()),
    FFMpegMuxerBase(name='tta', flags=' E', description='TTA (True Audio)', options=()),
    FFMpegMuxerBase(name='ttml', flags=' E', description='TTML subtitle', options=()),
    FFMpegMuxerBase(name='u16be', flags=' E', description='PCM unsigned 16-bit big-endian', options=()),
    FFMpegMuxerBase(name='u16le', flags=' E', description='PCM unsigned 16-bit little-endian', options=()),
    FFMpegMuxerBase(name='u24be', flags=' E', description='PCM unsigned 24-bit big-endian', options=()),
    FFMpegMuxerBase(name='u24le', flags=' E', description='PCM unsigned 24-bit little-endian', options=()),
    FFMpegMuxerBase(name='u32be', flags=' E', description='PCM unsigned 32-bit big-endian', options=()),
    FFMpegMuxerBase(name='u32le', flags=' E', description='PCM unsigned 32-bit little-endian', options=()),
    FFMpegMuxerBase(name='u8', flags=' E', description='PCM unsigned 8-bit', options=()),
    FFMpegMuxerBase(name='uncodedframecrc', flags=' E', description='uncoded framecrc testing', options=()),
    FFMpegMuxerBase(name='vc1', flags=' E', description='raw VC-1 video', options=()),
    FFMpegMuxerBase(name='vc1test', flags=' E', description='VC-1 test bitstream', options=()),
    FFMpegMuxerBase(name='vcd', flags=' E', description='MPEG-1 Systems / MPEG program stream (VCD)', options=()),
    FFMpegMuxerBase(name='vidc', flags=' E', description='PCM Archimedes VIDC', options=()),
    FFMpegMuxerBase(name='vob', flags=' E', description='MPEG-2 PS (VOB)', options=()),
    FFMpegMuxerBase(name='voc', flags=' E', description='Creative Voice', options=()),
    FFMpegMuxerBase(name='vvc', flags=' E', description='raw H.266/VVC video', options=()),
    FFMpegMuxerBase(name='w64', flags=' E', description='Sony Wave64', options=()),
    FFMpegMuxerBase(name='wav', flags=' E', description='WAV / WAVE (Waveform Audio)', options=()),
    FFMpegMuxerBase(name='webm', flags=' E', description='WebM', options=()),
    FFMpegMuxerBase(name='webm_chunk', flags=' E', description='WebM Chunk Muxer', options=()),
    FFMpegMuxerBase(name='webm_dash_manifest', flags=' E', description='WebM DASH Manifest', options=()),
    FFMpegMuxerBase(name='webp', flags=' E', description='WebP', options=()),
    FFMpegMuxerBase(name='webvtt', flags=' E', description='WebVTT subtitle', options=()),
    FFMpegMuxerBase(name='wsaud', flags=' E', description='Westwood Studios audio', options=()),
    FFMpegMuxerBase(name='wtv', flags=' E', description='Windows Television (WTV)', options=()),
    FFMpegMuxerBase(name='wv', flags=' E', description='raw WavPack', options=()),
    FFMpegMuxerBase(name='xv', flags=' E', description='XV (XVideo) output device', options=()),
    FFMpegMuxerBase(name='yuv4mpegpipe', flags=' E', description='YUV4MPEG pipe', options=()),
  ])
# ---
